name:                taggy-lens
version:             0.1.0.0
synopsis:            Lenses for taggy, another HTML parser outputting tag lists or a node tree
description:         Lenses for <http://hackage.haskell.org/package/taggy taggy>
homepage:            http://github.com/alpmestan/taggy-lens
license:             BSD3
license-file:        LICENSE
author:              Alp Mestanogullari
maintainer:          alpmestan@gmail.com
copyright:           2014 Alp Mestanogullari
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Text.Taggy.Lens
  build-depends:       base >=4.5 && <5,
                       contravariant,
                       taggy == 0.1.*,
                       text,
                       unordered-containers,
                       lens >= 4
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -fno-warn-orphans


test-suite spec
  type:             exitcode-stdio-1.0
  hs-source-dirs:   src, test
  main-is:          Spec.hs
  build-depends:    base >=4.5 && <5,
                    contravariant,
                    lens >= 4,
                    taggy == 0.1.*,
                    text,
                    unordered-containers,
                    hspec
  default-language: Haskell2010
  ghc-options:      -O2 -Wall -fno-warn-orphans

test-suite doctests
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: DocTest.hs
  ghc-options: -threaded
  build-depends: base, doctest >= 0.8
  default-language: Haskell2010
